--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "notes-app-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
