--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,9 @@
         }
     ],
     "routes": [
+        {"handle": "filesystem"},
         {
-            "src": "./src/(.*)",
+            "src": "src/.*",
             "dest": "/"
         }
     ]
