--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "notes-app-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node ./src/server.js",
-    "start-dev": "nodemon ./src/server.js",
+    "start": "node ./server.js",
+    "start-dev": "nodemon ./server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
