--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "node-fetch": "^2.6.1"
   }
 }
